--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="page_1">
-        <img src = "assets/page_1.png">
+        <img src = "assets/page_1.png" loading = "lazy">
     </div>
 
     <!--PAGE 2-->
     <div class = "page_2">
-    <img src = "assets/page_2.png">
+    <img src = "assets/page_2.png" loading = "lazy">
     </div>
 
     <!--PAGE 3-->
@@ -23,66 +23,66 @@
     
     <!--page_3-->
     <div class = "page_3">
-        <img src = "assets/Products.png">
+        <img src = "assets/Products.png" loading = "lazy">
     </div>
 
     <!--page_4-->
     <div class = "page_4">
-        <img src = "assets/4.png">
+        <img src = "assets/4.png" loading = "lazy">
     </div>
 
     <!--page_5-->
     <div class="page_5">
-        <img src = "assets/5.png">
+        <img src = "assets/5.png" loading = "lazy">
     </div>
 
     <!--page_6-->
     <div class="page_6">
-        <img src = "assets/6.png">
+        <img src = "assets/6.png" loading = "lazy">
     </div>
 
     <!--page_7-->
     <div class="page_7">
-        <img src = "assets/7.png">
+        <img src = "assets/7.png" loading = "lazy">
     </div>
     <!--page_8-->
     <div class="page_8">
-        <img src = "assets/8.png">
+        <img src = "assets/8.png" loading = "lazy">
     </div>
 
         <!--page_9-->
         <div class="page_9">
-            <img src = "assets/9.png">
+            <img src = "assets/9.png" loading = "lazy">
         </div>
 
     <!--page_10-->
     <div class="page_10">
-        <img src = "assets/10.png">
+        <img src = "assets/10.png" loading = "lazy">
     </div>
 
     <!--page_11-->
     <div class="page_11">
-        <img src = "assets/11.png">
+        <img src = "assets/11.png" loading = "lazy">
     </div>
   
         <!--page_12-->
         <div class="page_12">
-            <img src = "assets/12.png">
+            <img src = "assets/12.png" loading = "lazy">
         </div>
   
             <!--page_13-->
     <div class="page_13">
-        <img src = "assets/13.png">
+        <img src = "assets/13.png" loading = "lazy">
     </div>
 
         <!--page_14-->
         <div class="page_14">
-            <img src = "assets/location.png">
+            <img src = "assets/location.png" loading = "lazy">
         </div>
     
             <!--page_15-->
     <div class="page_15">
-        <img src = "assets/Contact us.png">
+        <img src = "assets/Contact us.png" loading = "lazy">
     </div>
 
 </body>
